# ccguilt

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  install.sh  report.html
.gitea/workflows/: ci.yaml  release.yaml
.github/workflows/: ci.yml  release.yml
scripts/: refresh-litellm.sh
src/: achievements.rs  aggregate.rs  cli.rs  completions.rs  config.rs  config_file.rs  dateparse.rs  forecast.rs  main.rs  mcp.rs  models.rs  recommend.rs  runtime.rs  sort_filter.rs  update.rs  watch.rs
src/calc/: cost.rs  impact.rs  litellm.rs  mod.rs
src/data/: cache.rs  db.rs  discovery.rs  gemini.rs  jsonl.rs  mod.rs  opencode.rs
src/display/: chart.rs  compare.rs  csv.rs  diff.rs  format.rs  guilt.rs  heatmap.rs  html.rs  json.rs  markdown.rs  mascot.rs  mod.rs  offset.rs  session_detail.rs  table.rs  token_breakdown.rs
src/interactive/: mod.rs  render.rs  state.rs
