[package]
name = "ccguilt"
version = "0.1.0"
edition = "2021"
description = "Claude Code Guilt Trip — satirical environmental impact tracker for your AI habit"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7"
colored = "2"
rand = "0.8"
anyhow = "1"
walkdir = "2"
rayon = "1"
indexmap = { version = "2", features = ["serde"] }
dirs = "6"

[profile.release]
opt-level = 3
lto = true
strip = true
