[package]
name = "ccguilt"
version = "0.5.2"
edition = "2021"
description = "Claude Code Guilt Trip — satirical environmental impact tracker for your AI habit"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7"
colored = "2"
crossterm = "0.29"
rand = "0.8"
anyhow = "1"
walkdir = "2"
rayon = "1"
indexmap = { version = "2", features = ["serde"] }
dirs = "6"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
rmcp = { version = "1.3", features = ["server", "macros", "transport-io", "schemars"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }

[profile.release]
opt-level = 3
lto = true
strip = true
